# pytest-demo

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py  test_test.py
src/app/: main.py
templates/: index.html
tests/: test_main.py
