[project]
name = "pytest-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "readme-md>=2018.11.23",
]
